<?xml version="1.0" encoding="utf-8"?>
<layout>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:context=".module.cart.schedule_order.CraveScheduleActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/medium_margin">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/value_64"
                android:elevation="@dimen/value_2"
                app:contentInsetStart="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/ivBack"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:contentDescription="@null"
                        android:padding="@dimen/value_16"
                        android:src="@drawable/ic_back_black"
                        app:tint="@color/grey_8f" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/choose_date_time"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_large" />

                </RelativeLayout>
            </androidx.appcompat.widget.Toolbar>

            <View
                android:id="@+id/border"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="@color/edit_text_tint"
                app:layout_constraintTop_toBottomOf="@+id/toolbar" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnToday"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginStart="@dimen/small_margin"
                android:layout_marginTop="@dimen/medium_margin"
                android:background="@drawable/crave_schedule_selector"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/today"
                android:textColor="@color/sort_by_color_selector"
                app:layout_constraintEnd_toStartOf="@+id/btnDaily"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/border" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnDaily"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginStart="@dimen/small_margin"
                android:layout_marginTop="@dimen/medium_margin"
                android:background="@drawable/crave_schedule_selector"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/daily"
                android:textColor="@color/sort_by_color_selector"
                app:layout_constraintEnd_toStartOf="@+id/btnWeekly"
               app:layout_constraintStart_toEndOf="@+id/btnToday"
                app:layout_constraintTop_toBottomOf="@+id/border" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnWeekly"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginTop="@dimen/medium_margin"
                android:background="@drawable/crave_schedule_selector"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/weekly"
                android:textColor="@color/sort_by_color_selector"
                app:layout_constraintEnd_toStartOf="@+id/btnMonthly"
                app:layout_constraintStart_toEndOf="@+id/btnDaily"
                app:layout_constraintTop_toBottomOf="@+id/border" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnMonthly"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginTop="@dimen/medium_margin"
                android:layout_marginEnd="@dimen/small_margin"
                android:background="@drawable/crave_schedule_selector"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/monthly"
                android:textColor="@color/sort_by_color_selector"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btnWeekly"
                app:layout_constraintTop_toBottomOf="@+id/border" />

            <!-- Add CalenderView to display the Calender -->
            <CalendarView
                android:id="@+id/calender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                app:layout_constraintTop_toBottomOf="@+id/btnMonthly">

            </CalendarView>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/medium_margin"
                android:layout_marginTop="@dimen/small_margin"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/schedule_time"
                android:textColor="@color/black_80"
                android:textSize="@dimen/text_xlarge"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/calender" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvSlots"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/medium_margin"
                android:layout_marginEnd="@dimen/medium_margin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvHeader"
                tools:listitem="@layout/item_crave_slot" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/medium_margin"
                android:layout_marginTop="@dimen/value_10"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/cancel"
                app:layout_constraintEnd_toStartOf="@+id/btnConfirm"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rvSlots"
                app:layout_constraintVertical_chainStyle="spread_inside" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnConfirm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/medium_margin"
                android:layout_marginTop="@dimen/value_10"
                android:layout_marginEnd="@dimen/value_10"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/confirm"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btnCancel"
                app:layout_constraintTop_toBottomOf="@+id/rvSlots"
                app:layout_constraintVertical_chainStyle="spread_inside" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>
</layout>