<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="color"
            type="com.codebrew.clikat.utils.configurations.ColorConfig" />

    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >
    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_app"
        app:color="@{color}"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/view1"
        android:background="@color/divider"/>
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/view1"
    android:text="@string/fill"
    android:layout_marginTop="@dimen/_20sdp"
    android:textColor="@color/dark_grey1"
    android:textSize="@dimen/_15ssp"
    android:id="@+id/tv_fill"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_fill"
        android:text="@string/your_name"
        android:layout_marginStart="@dimen/_35sdp"
        android:layout_marginEnd="@dimen/_35sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:textColor="@color/dark_grey1"
        android:textSize="@dimen/_13ssp"
        android:id="@+id/tv_name"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_name"
        android:hint="@string/your_name"
        android:inputType="text"
        android:imeOptions="actionNext"
        android:paddingStart="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_35sdp"
        android:layout_marginEnd="@dimen/_35sdp"
        android:textColorHint="@color/lightGrey"
        android:background="@drawable/background_grey_stroke"
        android:textColor="@color/dark_grey1"
        android:textSize="@dimen/_12ssp"
        android:id="@+id/et_name"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_name"
        android:text="@string/mobile_number"
        android:layout_marginStart="@dimen/_35sdp"
        android:layout_marginEnd="@dimen/_35sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:textColor="@color/dark_grey1"
        android:textSize="@dimen/_13ssp"
        android:id="@+id/tv_mobile"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_mobile"
        android:hint="@string/mobile_number"
        android:paddingStart="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_35sdp"
        android:layout_marginEnd="@dimen/_35sdp"
        android:textColorHint="@color/lightGrey"
        android:background="@drawable/background_grey_stroke"
        android:textColor="@color/dark_grey1"
        android:textSize="@dimen/_12ssp"
        android:inputType="number"
        android:imeOptions="actionNext"
        android:id="@+id/et_mobile"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_mobile"
        android:text="@string/car_number"
        android:layout_marginStart="@dimen/_35sdp"
        android:layout_marginEnd="@dimen/_35sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:textColor="@color/dark_grey1"
        android:textSize="@dimen/_13ssp"
        android:id="@+id/tv_carnumber"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_carnumber"
        android:hint="@string/car_number"
        android:paddingStart="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_35sdp"
        android:layout_marginEnd="@dimen/_35sdp"
        android:textColorHint="@color/lightGrey"
        android:inputType="text"
        android:imeOptions="actionNext"
        android:background="@drawable/background_grey_stroke"
        android:textColor="@color/dark_grey1"
        android:textSize="@dimen/_12ssp"
        android:id="@+id/et_carNumber"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_carNumber"
        android:text="@string/car_color"
        android:layout_marginStart="@dimen/_35sdp"
        android:layout_marginEnd="@dimen/_35sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:textColor="@color/dark_grey1"
        android:textSize="@dimen/_13ssp"
        android:id="@+id/tv_carColor"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_carColor"
        android:hint="@string/car_color"
        android:paddingStart="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_35sdp"
        android:layout_marginEnd="@dimen/_35sdp"
        android:inputType="text"
        android:imeOptions="actionNext"
        android:textColorHint="@color/lightGrey"
        android:background="@drawable/background_grey_stroke"
        android:textColor="@color/dark_grey1"
        android:textSize="@dimen/_12ssp"
        android:id="@+id/et_carColor"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_carColor"
        android:text="@string/car_model"
        android:layout_marginStart="@dimen/_35sdp"
        android:layout_marginEnd="@dimen/_35sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:textColor="@color/dark_grey1"
        android:textSize="@dimen/_13ssp"
        android:id="@+id/tv_carmodel"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_carmodel"
        android:hint="@string/car_model"
        android:paddingStart="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_35sdp"
        android:layout_marginEnd="@dimen/_35sdp"
        android:textColorHint="@color/lightGrey"
        android:background="@drawable/background_grey_stroke"
        android:textColor="@color/dark_grey1"
        android:inputType="text"
        android:imeOptions="actionNext"
        android:textSize="@dimen/_12ssp"
        android:id="@+id/et_carModel"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_submit"
        android:layout_width="@dimen/_190sdp"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/button_bg_yellow"
        android:fontFamily="@font/poppins_semibold"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:text="@string/done"
        android:textSize="@dimen/text_large"

        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_carModel" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>